Implementation up to side-bar(group-list)&chat-main(group-info)
サイドバー（画面左）は完了
チャットメイン（画面右）については
上部のグループインフォメーションのみ終了

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,4 +1,12 @@
 .chat-main
   .chat-main__group-info
+    .chat-main__group-info--left-contents
+      %p.chat-main__group-info--left-contents--title
+        title
+      %p.chat-main__group-info--left-contents--message
+        message
+    .chat-main__group-info--right-content
+      = link_to "#" do
+        Edit
   .chat-main__message-list
   .chat-main__message-form
