--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -11,4 +11,8 @@
           = link_to "#" do
             = icon('fas', 'cog')
   .side-bar__group-list
-    
+    %p.side-bar__group-list--group-name
+      techcamp
+    %p.side-bar__group-list--message
+      まだメッセージはありません
+
