--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -41,15 +41,25 @@
             color: #ffffff;
             text-align: left;
           }
-
-
         }
       }
     }
   }
+
   &__group-list {
     height: calc(100vh - 100px);
     background-color: #2f3e51;
+    font-weight: bold;
+    padding: 20px;
+    &--group-name {
+      font-size: 15px;
+      margin-bottom: 5px;
+      color: #ffffff;
+    }
+    &--message {
+      font-size: 11px;
+      color: #ffffff;
+    }
   }
 }
 
@@ -61,6 +71,38 @@
     height: 100px;
     background-color: #ffffff;
     border-bottom: solid #eeeeee;
+    padding-left: 40px;
+    padding-right: 40px;
+    display: flex;
+    justify-content: space-between;
+    
+    &--left-contents {
+      padding-top: 35px;
+      &--title {
+        font-size: 20px;
+        color: #333333;
+        margin-bottom: 15px;
+      }
+      &--message {
+        color: #999999;
+        font-size: 12px;
+      }
+    }
+    &--right-content {
+      height: 40px;
+      line-height: 40px;
+      padding: 0 20px;
+      margin-top: 28px;
+      border: solid 1px #38aef0;
+      a {
+      text-decoration:none;
+      color: #38aef0;
+      // // position: absolute;
+      // right: 40px;
+      }
+    }
+
+
   }
   &__message-list {
     height: calc(100vh - 100px - 90px);
