--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -9,4 +9,20 @@
       = link_to "#" do
         Edit
   .chat-main__message-list
+    .chat-main__message-list--box
+      .chat-main__message-list--box--top
+        %p.chat-main__message-list--box--top--name
+          you
+        %p.chat-main__message-list--box--top--date
+          2020/04/21(tue) 12:42
+      %p.chat-main__message-list--box--bottom
+        おはようございます！
+    .chat-main__message-list--box
+      .chat-main__message-list--box--top
+        %p.chat-main__message-list--box--top--name
+          you
+        %p.chat-main__message-list--box--top--date
+          2020/04/21(tue) 12:42
+      %p.chat-main__message-list--box--bottom
+        おはようございます！
   .chat-main__message-form
