--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -11,8 +11,13 @@
           = link_to "#" do
             = icon('fas', 'cog')
   .side-bar__group-list
-    %p.side-bar__group-list--group-name
-      techcamp
-    %p.side-bar__group-list--message
-      まだメッセージはありません
-
+    .side-bar__group-list--box
+      %p.side-bar__group-list--box--group-name
+        techcamp
+      %p.side-bar__group-list--box--message
+        まだメッセージはありません
+    .side-bar__group-list--box
+      %p.side-bar__group-list--box--group-name
+        techcamp
+      %p.side-bar__group-list--box--message
+        まだメッセージはありません
