--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -25,12 +25,12 @@
           2020/04/21(tue) 12:42
       %p.chat-main__message-list--box--bottom
         おはようございます！
-  .chat-main__message-form
+  .form
     %form
-      .chat-main__message-form--box
-        .chat-main__message-form--box--left-content
-          %input{type: "text",placeholder: "type a message",class: "chat-main__message-form--box--left-content--message"}
-          %label{class: "chat-main__message-form--box--left-content--image"}
+      .form--box
+        .form--box--left-content
+          %input{type: "text",placeholder: "type a message",class: "form--box--left-content--message"}
+          %label{class: "form--box--left-content--image"}
             = icon('far', 'image')
-            %input{type: "file", style: "display:none"}
-        %input{type: "submit", value: "Send",class: "chat-main__message-form--box--right-content"}
+            %input{type: "file", class:"form--box--left-content--image--file"}
+        %input{type: "submit", value: "Send",class: "form--box--right-content"}
