--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -14,12 +14,12 @@ $chat-sub__font-color: #999999;
   width: 300px;
   background-color: #253141;
   float: left;
-  &__user-name {
+  .user-name {
     height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
-    &--top-item {
+    &__top-item {
       height: 20px;
       width: 260px;
       margin: 0 20px;
@@ -28,7 +28,7 @@ $chat-sub__font-color: #999999;
       text-align: center;
       line-height: 20px;
       font-weight: bold;
-      &__name {
+      &--name {
         color: $side-bar__font-color;
         font-size: 16px;
       }
@@ -48,12 +48,12 @@ $chat-sub__font-color: #999999;
       }
     }
   }
-  &__group-list {
+  .group-list {
     height: calc(100vh - 100px);
     background-color: #2f3e51;
     font-weight: bold;
     padding:  0 20px;
-    &--box {
+    &__box {
       padding-top: 20px;
       padding-bottom: 40px;
       &--group-name {
@@ -73,7 +73,7 @@ $chat-sub__font-color: #999999;
   width: calc(100vw - 300px);
   background-color: #ffffff;
   float: right;
-  &__group-info {
+  .group-info {
     height: 100px;
     background-color: #ffffff;
     border-bottom: solid #eeeeee;
@@ -81,7 +81,7 @@ $chat-sub__font-color: #999999;
     padding-right: 40px;
     display: flex;
     justify-content: space-between;
-    &--left-content {
+    &__left-content {
       padding-top: 35px;
       &--title {
         font-size: 20px;
@@ -93,7 +93,7 @@ $chat-sub__font-color: #999999;
         font-size: 12px;
       }
     }
-    &--right-content {
+    &__right-content {
       height: 40px;
       line-height: 40px;
       padding: 0 20px;
@@ -106,11 +106,11 @@ $chat-sub__font-color: #999999;
     }
   }
 
-  &__message-list {
+  .message-list {
     height: calc(100vh - 100px - 90px);
     background-color: #fafafa;
     padding: 35px 40px;
-    &--box {
+    &__box {
       padding-bottom: 46px;
       &--top {
         margin-bottom: 12px;
@@ -137,7 +137,7 @@ $chat-sub__font-color: #999999;
     display: flex;
     align-items: center;
     padding: 0 40px;
-      &--box {
+      &__box {
         display: flex;
         width: 100%;
         &--left-content {
