--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,23 +1,23 @@
 .side-bar
-  .side-bar__user-name
-    .side-bar__user-name--top-item
-      .side-bar__user-name--top-item__name
+  .user-name
+    .user-name__top-item
+      .user-name__top-item--name
         masa
-      %ul.side-bar__user-name--top-item__icons
-        %li.side-bar__user-name--top-item__icons__left-icon
+      %ul.user-name__top-item__icons
+        %li.user-name__top-item__icons--left-icon
           = link_to "#" do
             = icon('fas','edit')
-        %li.side-bar__user-name--top-item__icons__right-icon
+        %li.user-name__top-item__icons--right-icon
           = link_to "#" do
             = icon('fas', 'cog')
-  .side-bar__group-list
-    .side-bar__group-list--box
-      %p.side-bar__group-list--box--group-name
+  .group-list
+    .group-list__box
+      %p.group-list__box--group-name
         techcamp
-      %p.side-bar__group-list--box--message
+      %p.group-list__box--message
         まだメッセージはありません
-    .side-bar__group-list--box
-      %p.side-bar__group-list--box--group-name
+    .group-list__box
+      %p.group-list__box--group-name
         techcamp
-      %p.side-bar__group-list--box--message
+      %p.group-list__box--message
         まだメッセージはありません
