--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,13 +2,13 @@
   .user-name
     .user-name__top-item
       .user-name__top-item--name
-        masa
+        = current_user.name
       %ul.user-name__top-item__icons
         %li.user-name__top-item__icons--left-icon
           = link_to "#" do
             = icon('fas','edit')
         %li.user-name__top-item__icons--right-icon
-          = link_to "#" do
+          = link_to "/users/#{current_user.id}/edit" do
             = icon('fas', 'cog')
   .group-list
     .group-list__box
