Implementation of message transmission function

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -13,7 +13,7 @@
   .group-list
     - current_user.groups.each do |group|
       .group-list__box
-        =link_to '#' do
+        =link_to "#" do
           %p.group-list__box--group-name
             = group.name
           %p.group-list__box--message
