--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -17,20 +17,12 @@
           2020/04/21(tue) 12:42
       %p.message-list__box--bottom
         おはようございます！
-    .message-list__box
-      .message-list__box--top
-        %p.message-list__box--top--name
-          you
-        %p.message-list__box--top--date
-          2020/04/21(tue) 12:42
-      %p.message-list__box--bottom
-        おはようございます！
   .form
-    %form
+    = form_for [@group, @message] do |f|
       .form__box
         .form__box--left-content
-          %input{type: "text",placeholder: "type a message",class: "form__box--left-content--message"}
-          %label{class: "form__box--left-content--image"}
+          = = f.text_field :content, class: "form__box--left-content--message", placeholder: "type a message"
+          = f.label :image, class: "form__box--left-content--image" do
             = icon('far', 'image')
-            %input{type: "file", class:"form__box--left-content--image--file"}
-        %input{type: "submit", value: "Send",class: "form__box--right-content"}
+            = = f.file_field :image, class:"form__box--left-content--image--file"
+        = = f.submit 'Send', class: "form__box--right-content"
