Completed implementation of message sending function
メッセージ送信機能の実装完了

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -128,6 +128,10 @@ $chat-sub__font-color: #999999;
       &--bottom {
         font-size: 14px;
         color: #434A54;
+        // .lower-message__image {
+        //   記入するかも。。。？
+
+        // }
       }
     }
   }
