completed until step7
7まで完成↓

・0 新しいブランチを作成する
・1 chat-spaceでjQueryが使えるように設定し、jsファイルを作成する
・2 フォームが送信されたら、イベントが発火するようにする
・3 2のイベントが発火したときにAjaxを使用して、messages#createが動くようにする
・4 messages#createでメッセージを保存し、respond_toを使用してHTMLとJSONの場合で処理を分ける
・5 jbuilderを使用して、作成したメッセージをJSON形式で返す
・6 返ってきたJSONをdoneメソッドで受取り、HTMLを作成する
・7 6で作成したHTMLをメッセージ画面の一番下に追加する
・8 メッセージを送信したとき、メッセージ画面を最下部にスクロールする
・9 連続で送信ボタンを押せるようにする
・10 非同期に失敗した場合の処理も準備する

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -4,7 +4,10 @@
       %p.group-info__left-content--title
         = @group.name
       %p.group-info__left-content--message
-        グループメンバー出したいけどわからんかった！！
+        Member :
+        - users = @group.users
+        - users.each do |user|
+          = user.name
     .group-info__right-content
       = link_to edit_group_path(@group), method: :get do
         Edit
@@ -21,3 +24,4 @@
             = icon('far', 'image')
             = f.file_field :image, class:"form__box--left-content--image--file"
         = f.submit 'Send', class: "form__box--right-content"
+        
