--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -110,6 +110,7 @@ $chat-sub__font-color: #999999;
     height: calc(100vh - 100px - 90px);
     background-color: #fafafa;
     padding: 35px 40px;
+    overflow: scroll;
     &__box {
       padding-bottom: 46px;
       &--top {
@@ -130,7 +131,6 @@ $chat-sub__font-color: #999999;
         color: #434A54;
         // .lower-message__image {
         //   記入するかも。。。？
-
         // }
       }
     }
