completed automatic-update-functoin

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.message-list__box
+.message-list__box{data: {message: {id: message.id}}}
   .message-list__box--top
     .message-list__box--top--name
       = message.user.name
